fix: align the loading spinner in the center on all views

--- a/app/assets/stylesheets/loading.scss
+++ b/app/assets/stylesheets/loading.scss
@@ -12,6 +12,9 @@
   visibility: hidden;
   opacity: 0;
   transition: visibility 0.25s, opacity 0.25s linear;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #loading.show {
@@ -27,8 +30,6 @@
   width: 50px;
   height: 50px;
   position: absolute;
-  top: 40%;
-  left: 50%;
 }
 
 .sk-fading-circle .sk-circle:before {
